2002-08-07  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in (doc-python): Simplify.

	* qm/fields.py (Field.__init__): Check that properties provided
	make sense for this class.

	* qm/test/execution_engine.py (ExecutionEngine.__init__): Set
	__running.
	(ExecutionEngine.RunTests): Use it to detect deadlock.  Remove
	__debug__ guards over all calls to _Trace.
	(ExecutionEngine._AddResult): Decrement running when a test result
	is seen.
	(ExecutionEngine._Trace): Check __debug__ here.
	* qm/test/classes/thread_target (ThreadTarget.__init__): Correct
	typo.
	* qm/test/share/messages/diagnostics.txt: Move dependency cycle
	message here.
	* share/diagnostics/common.txt: Remove it from here.
	
	* NEWS: Mention "qmtest extensions" and "qmtest register".
	* qm/common.py (load_module): Separate path parameter into
	search_path and load_path.
	(load_class): Likewise.
	* qm/extension.py: New class.
	* qm/test/base.py (dtds): Mention class-directory.
	(load_database): Handle "xmldb.Database" and
	"qm.test.xmldb.Database" specially for backwards compatibility.
	(get_extension_directories): Do not require a database.
	(get_extension_class_from_directory): New method.
	(get_extension_class): Use it.
	(get_class_arguments): Remove.
	(__extension_bases): New variable.
	* qm/test/cmdline.py (QMTest.extension_kind_option_spec): New variable.
	(commands_spec): Add "extensions", "register", and "help".
	(QMTest.Execute): Support them.
	(QMTest.GetDatabase): Instantiate the database if it does not
	already exist.
	(QMTest.GetTargets): Adjust for changes to Target.
	(QMTest.__ExecuteCreateTdb): Adjust name of default database
	class.
	(QMTest.__ExecuteExtensions): New method.
	(QMTest.__ExecuteRegister): Likewise.
	(QMTest.__WriteCommandHelp): New method.
	* qm/test/database.py: Import qm.extension, qm.fields.
	(ItemDescriptor.GetClassArguments): Use
	qm.extension.get_class_arguments.
	(ItemDescriptor._MakeItem): Remove.
	(Database): Inherit from Extension.